--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.85.5",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
